# lumerical-docs

./: .gitignore  AGENTS.md  HISTORY.md  LSF-DOCUMENTATION-SCRAPING-WORKFLOW.md  QUICK-START-SCRAPING.md  README.md  SCRAPING-PROJECT-COMPLETION-SUMMARY.md  analyze.py  analyze2.py  analyze3.py  analyze_conflicts.py  fix_missing_commands.py  optimization_checkpoint.json  optimization_report.json  pyproject.toml  quality-improvement-workflow.md  quality-report-50.json  requirements.txt  test_index_output.md  test_sanitize.py  verify_completeness.py
backup/: backup-validation-20260208.md
docs/: DOCUMENTATION-TASK-SPEC.md  INCREMENTAL-SCRAPING-GUIDE.md  batch_translation_log.json  completeness-validation.md  documentation-quality-standards.md  lumapi-principles.md  missing-lsf-script-docs.md  script-commands-alphabetical.md  script-commands-by-category.md  translation-progress-detailed.json  translation-progress.json  translation-report.json  translation-workflow-guide.md  verification-result.md
plan/: branch-specification.md  documentation-optimization-task-spec.md  file-classification-matrix.md  initial-commit.txt  project-reorganization-detailed.md  sync-shared-docs.sh  verify-branches.sh  verify-dependencies.sh  verify-documents.sh
scripts/: analyze_missing_commands.py  auto_translate.py  batch_scrape_10.sh  batch_scrape_fast.py  batch_translate.py  check_translation_status.py  create_correct_index.py  final_fix_index.py  find_untranslated.py  fix_index.py  fix_index_paths.py  generate_translation_report.py  manual_batch_translate.py  manual_translate.py  (+21 more)
(+1904 files in other folders)
