[project]
name = "lumpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erwen Li", email = "erwen.li@innolight.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "html2text>=2025.4.15",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "webdriver-manager>=4.0.2",
    "mdformat>=0.7.0",
    "mdformat-tables>=0.4.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
